--- a/html/style.css
+++ b/html/style.css
@@ -132,6 +132,8 @@ ul{
 .baixo{
    display: flex;
    padding-left: 250px;
+   color: black;
+   background-color: white;
 }
 
 .baixo2{
@@ -144,7 +146,8 @@ ul{
 }
 
 .baixob{
-    color: #767779;
+    color: black;
+    background-color: white;
     transition: trasnform 0.2s ease-in-out;
 }
 
@@ -210,7 +213,7 @@ ul{
 }
 
 .cartao{
-   margin-top: 12px;
+    margin-top: 12px;
 }
 
 .fiscal{
@@ -369,4 +372,4 @@ img {
 
 .sublinhado {
     background-color: yellow;
-  }
+}
